app/assets/styles/layout/_header.scss
header {
    position: sticky;
    top: 0;
    width: 100%;
    transition: background-color 0.3s ease;
    max-width: 100vw;
    overflow-x: visible !important;
}

.header__headband,
.header__container {
    @include flex-container(row, space-between, center);
}

.header__headband {
    background-color: var(--color-primary);
    padding: 0.5rem 1.5rem;

    .language-icons {
        border: 0.1rem solid var(--color-text);
        border-radius: 100%;
    }

    &-left-list,
    &-right-list {
        @extend %flex-row;

        svg {
            height: 1.15rem;
            width: auto;
        }

        @include respond-to('breakpoint-576') {
            svg {
                height: 1.35rem;
            }
        }

        @include respond-to('breakpoint-768') {
            svg {
                height: 1.5rem;
            }
        }
    }

    &-left-list {
        li {
            margin-right: 0.75rem;
        }

        span {
            margin-right: 0.75rem;
        }
    }

    &-right-list {
        li {
            margin-left: 0.75rem;
        }
    }

    @include respond-to('breakpoint-768') {
        padding: 0.5rem 5rem;

        &-left-list,
        &-right-list {
            svg {
                height: 1.45rem;
                width: auto;
            }
        }

        &-left-list {
            li,
            span {
                margin-right: 1rem;
            }
        }

        &-right-list {
            li {
                margin-left: 1rem;
            }
        }
    }
}

.header__container {
    background-color: var(--color-tertiary);
    min-height: 5.5rem;
    padding: 1rem 1.5rem;

    @include respond-to('breakpoint-768') {
        padding: 1rem 5rem;
    }

    &-title {
        a {
            display: flex;
            align-items: center;
            height: fit-content;
        }

        svg {
            height: 2.5rem;
            width: auto;
        }

        @include respond-to('breakpoint-576') {
            svg {
                height: 3.15rem;
            }
        }

        @include respond-to('breakpoint-768') {
            svg {
                height: 3.5rem;
            }
        }
    }

    &-menu-close {
        display: none;
    }

    &-menu-open,
    &-menu-close {
        padding: 0;
        background-color: transparent;
        border: none;

        svg {
            height: 2.5rem;
            width: auto;
        }

        @include respond-to('breakpoint-576') {
            svg {
                height: 3.15rem;
            }
        }

        @include respond-to('breakpoint-768') {
            svg {
                height: 3.5rem;
            }
        }
    }
}

